Fix enpoints wrong position after img loaded (mobile)

--- a/src/components/Exercises/Connect/box.css
+++ b/src/components/Exercises/Connect/box.css
@@ -1,10 +1,6 @@
-.boxRight {
-  margin-left: -15px;
-}
-.boxLeft {
-  margin-left: 10px;
-}
-.line{
-    margin-right: -15px;
-    margin-left: 10px;
+.circle{
+  border-width: 5px;
+  border-color: black;
+  border-radius: 15px;
+
 }
